--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 # arduino
 Découverte d'arduino
-image::images/blink.svg[Interactive,300,opts=interactive]
+image::blink.svg[Interactive,300,opts=interactive]
