--- a/README.adoc
+++ b/README.adoc
@@ -1,8 +1,7 @@
 # arduino
-Découverte d'arduino
-= Titre du document
-Nom de l’auteur <david.gillard@ac-lille.fr>
+= Découverte d'arduino
+David GILLARD <david.gillard@ac-lille.fr>
 v1.0, 2022-01-01
 :toc:
 :imagesdir: images
-image::blink.svg[Interactive,300,opts=interactive]
+images::blink.svg[Interactive,300,opts=interactive]
